crates/rv/tests/integration_tests/shell/snapshots/integration_tests__shell__env_test__nushell_env_succeeds.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
{"GEM_HOME":{},"GEM_PATH":{},"GEM_ROOT":{},"PATH":"","RUBYOPT":{},"RUBY_ENGINE":{},"RUBY_ROOT":{},"RUBY_VERSION":{}}
