crates/rv/tests/integration_tests/shell/snapshots/integration_tests__shell__env_test__shell_env_with_path.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
unset RUBY_ROOT RUBY_ENGINE RUBY_VERSION RUBYOPT GEM_ROOT GEM_HOME GEM_PATH
hash -r
