crates/rv/tests/integration_tests/shell/snapshots/integration_tests__shell__env_test__shell_env_with_ruby.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
unset RUBYOPT GEM_ROOT
export RUBY_ROOT=/opt/rubies/ruby-3.3.5
export RUBY_ENGINE=ruby
export RUBY_VERSION=''
export GEM_HOME=/Users/andre/.gem/ruby/
export GEM_PATH=/Users/andre/.gem/ruby/bin
export PATH='/Users/andre/.gem/ruby/bin:/opt/rubies/ruby-3.3.5/bin:/tmp/bin'
hash -r
