crates/rv/tests/integration_tests/shell/snapshots/integration_tests__shell__env_test__shell_env_with_ruby_and_xdg_compatible_gem_path.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
unset RUBYOPT GEM_ROOT
export RUBY_ROOT=/tmp/opt/rubies/ruby-3.3.5
export RUBY_ENGINE=ruby
export RUBY_VERSION=3.3.5
export GEM_HOME=/tmp/home/.local/share/rv/gems/ruby/3.3.5
export GEM_PATH=/tmp/home/.local/share/rv/gems/ruby/3.3.5
export MANPATH='/tmp/opt/rubies/ruby-3.3.5/share/man:'
export PATH='/tmp/home/.local/share/rv/gems/ruby/3.3.5/bin:/tmp/opt/rubies/ruby-3.3.5/bin:/tmp/bin'
hash -r
